Running sanity checks and error analysis

--- a/experiments/notebooks/get_constrained_cohort.ipynb
+++ b/experiments/notebooks/get_constrained_cohort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,12 +48,22 @@
     "        \"cohort/cohort_split_no_nb.parquet\"\n",
     "    ),\n",
     "    engine='pyarrow'\n",
-    ")\n"
+    ")\n",
+    "cohort = cohort.query('pediatric_age_group!=\"term neonatal\"')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 345"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,90 +91,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.05\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3653436/304646577.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2246009/599771163.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  perc_df['constrain'].loc[perc_df['person_id'].isin(tr_pids)] = 1\n",
-      "/tmp/ipykernel_3653436/304646577.py:9: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2246009/599771163.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  perc_df['constrain'].loc[perc_df['person_id'].isin(v_pids)] = 1\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1202\n",
-      "0.1\n",
-      "2404\n",
-      "0.15\n",
-      "3606\n",
-      "0.2\n",
-      "4808\n",
-      "0.25\n",
-      "6009\n",
-      "0.3\n",
-      "7211\n",
-      "0.35\n",
-      "8413\n",
-      "0.4\n",
-      "9615\n",
-      "0.45\n",
-      "10817\n",
-      "0.5\n",
-      "12019\n",
-      "0.55\n",
-      "13221\n",
-      "0.6\n",
-      "14423\n",
-      "0.65\n",
-      "15625\n",
-      "0.7\n",
-      "16827\n",
-      "0.75\n",
-      "18029\n",
-      "0.8\n",
-      "19230\n",
-      "0.85\n",
-      "20432\n",
-      "0.9\n",
-      "21634\n",
-      "0.95\n",
-      "22836\n"
-     ]
     }
    ],
    "source": [
     "for percent in list(range(5,100,5)):\n",
-    "    tr_df = tr.sample(frac=percent/100.0, random_state=72)\n",
+    "    tr_df = tr.sample(frac=percent/100.0, random_state=seed)\n",
     "    tr_pids = tr_df['person_id'].values\n",
-    "    v_df = v.sample(frac=percent/100.0, random_state=72)\n",
+    "    v_df = v.sample(frac=percent/100.0, random_state=seed)\n",
     "    v_pids = v_df['person_id'].values\n",
     "    perc_df = cohort.copy()\n",
     "    perc_df['constrain'].loc[perc_df['person_id'].isin(tr_pids)] = 1\n",
     "    perc_df['constrain'].loc[perc_df['person_id'].isin(v_pids)] = 1\n",
+    "\n",
     "    perc_df.to_parquet(\n",
     "        f\"/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/cohort/cohort_split_no_nb_constrain_{percent}.parquet\",\n",
     "        engine=\"pyarrow\",\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
