--- a/experiments/notebooks/features_mapped_pediatric.ipynb
+++ b/experiments/notebooks/features_mapped_pediatric.ipynb
@@ -338,9 +338,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conl",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -352,9 +352,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
